# yt-music-unofficial

./: .gitignore  CHANGELOG.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  package-lock.json  package.json
scripts/: build-windows.ps1  verify-windows-bundle.ps1
src/: index.html
src-tauri/: Cargo.toml  discord-client-id.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: adblock.rs  adblock_probe.js  controls.rs  lib.rs  main.rs  platform.rs  presence.rs  settings.rs  track_probe.js  updates.rs  url_policy.rs
tests/: adblock_probe.test.mjs  windows_packaging.test.mjs
