[package]
name = "yt-music-tauri"
version = "0.1.6"
description = "Low-memory YouTube Music desktop wrapper with native ad filtering and Discord Rich Presence support"
authors = ["Hype"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "yt_music_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
discord-rich-presence = "1.1.0"
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "native-tls"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11.5", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2.3.2"
tauri-plugin-single-instance = "2.4.2"
tauri-plugin-window-state = "2.4.1"
webview2-com = "0.38.2"
windows = { version = "0.61.3", features = ["Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }
winreg = "0.55.0"
